unpackaged/main/default/objects/Claims_Form__c/fields/Unemployment_Benefits_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Unemployment_Benefits_Frequency__c</fullName>
    <label>Unemployment Benefits Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency_Weekly_Monthly</valueSetName>
    </valueSet>
</CustomField>