unpackaged/main/default/objects/Claims_Form__c/fields/Unemployment_Date_Applied__c.field-meta.xml
<CustomField>
    <fullName>Unemployment_Date_Applied__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unemployment Date Applied</label>
    <type>Date</type>
</CustomField>