unpackaged/main/default/objects/Claims_Form__c/fields/Unemployment_Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unemployment_Gross_Amount__c</fullName>
    <label>Unemployment Gross Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>