unpackaged/main/default/objects/Claims_Form__c/fields/Wellness_Fraud_State__c.field-meta.xml
<CustomField>
    <fullName>Wellness_Fraud_State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraud State</label>
    <referenceTo>Wellness_Fraud_Notice__c</referenceTo>
    <relationshipLabel>Claims Forms</relationshipLabel>
    <relationshipName>Claims_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>