unpackaged/main/default/objects/Claims_Form__c/fields/Were_you_Driver_Passenger_Pedestrian__c.field-meta.xml
<CustomField>
    <fullName>Were_you_Driver_Passenger_Pedestrian__c</fullName>
    <label>Were you Driver/Passenger/Pedestrian</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Passenger</fullName>
            </value>
            <value>
                <fullName>Pedestrian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>