unpackaged/main/default/objects/Claims_Form__c/fields/What_and_When_was_Previous_Illness__c.field-meta.xml
<CustomField>
    <fullName>What_and_When_was_Previous_Illness__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>What and When was Previous Condition</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>