unpackaged/main/default/objects/Claims_Form__c/fields/What_Main_Material_Duties_Unable_to_do__c.field-meta.xml
<CustomField>
    <fullName>What_Main_Material_Duties_Unable_to_do__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What main or material duties of job are they unable to perform</inlineHelpText>
    <label>What Main/Material Duties Unable to do</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>