unpackaged/main/default/objects/Claims_Form__c/fields/Workers_Compensation_Benefit_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Workers_Compensation_Benefit_Begin_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Workers Compensation Benefit Begin Date</label>
    <type>Date</type>
</CustomField>