unpackaged/main/default/objects/Claims_Form__c/fields/Workers_Compensation_Benefit_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Workers_Compensation_Benefit_Frequency__c</fullName>
    <label>Workers&#39; Compensation Benefit Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency_Weekly_Monthly</valueSetName>
    </valueSet>
</CustomField>