unpackaged/main/default/objects/Claims_Form__c/fields/Workers_Compensation_Date_Applied__c.field-meta.xml
<CustomField>
    <fullName>Workers_Compensation_Date_Applied__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Workers&#39; Compensation Date Applied</label>
    <type>Date</type>
</CustomField>