unpackaged/main/default/objects/Claims_Form__c/fields/Workers_Compensation_Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Workers_Compensation_Gross_Amount__c</fullName>
    <label>Workers&#39; Compensation Gross Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>