unpackaged/main/default/objects/Claims_Form__c/recordTypes/Short_Term_Disability.recordType-meta.xml
<RecordType>
    <fullName>Short_Term_Disability</fullName>
    <active>true</active>
    <description>Used for Disability Claims</description>
    <label>Short Term Disability</label>
</RecordType>