unpackaged/main/default/objects/Claims_Form__c/recordTypes/Wellness.recordType-meta.xml
<RecordType>
    <fullName>Wellness</fullName>
    <active>true</active>
    <description>Used to file claim for Wellness Form</description>
    <label>Wellness</label>
</RecordType>