unpackaged/main/default/objects/Claims_Form__c/validationRules/CL000OnlineOneClaimsForm.validationRule-meta.xml
<ValidationRule>
    <fullName>CL000OnlineOneClaimsForm</fullName>
    <active>false</active>
    <description>Only One Claims Form per case</description>
    <errorConditionFormula>AND(
 Case__r.Claims_Form_Count__c &gt;= 1,
ISNEW()
)</errorConditionFormula>
    <errorMessage>CL000- Online one Claims Form per Case</errorMessage>
</ValidationRule>