unpackaged/main/default/objects/Claims_Form__c/validationRules/CL001Validate_if_Social_Security_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>CL001Validate_if_Social_Security_Number</fullName>
    <active>true</active>
    <errorConditionFormula>OR (Not(ISNUMBER(Social_Security__c)),LEN( Social_Security__c) &lt;&gt; 9)</errorConditionFormula>
    <errorDisplayField>Social_Security__c</errorDisplayField>
    <errorMessage>CL-001 Social Security must be numeric 9 digits</errorMessage>
</ValidationRule>