unpackaged/main/default/objects/Claims_Form__c/validationRules/CL002Validate_Patient_SSN.validationRule-meta.xml
<ValidationRule>
    <fullName>CL002Validate_Patient_SSN</fullName>
    <active>true</active>
    <description>Patient SSN Must be entered if relationship not Self</description>
    <errorConditionFormula>AND( OR(TEXT(Relationship_to_Patent__c) = &quot;Spouse&quot;, TEXT(Relationship_to_Patent__c) = &quot;Dependent&quot;), OR(Not(ISNUMBER( Patient_Social_Security__c )),LEN(  Patient_Social_Security__c ) &lt;&gt; 9), RecordType.DeveloperName = &quot;Wellness&quot;)</errorConditionFormula>
    <errorDisplayField>Patient_Social_Security__c</errorDisplayField>
    <errorMessage>CL-002 Patient Social Security must be numeric 9 digits If Relationship not Self</errorMessage>
</ValidationRule>