unpackaged/main/default/objects/Claims_Form__c/validationRules/CL003PatientNameEntered.validationRule-meta.xml
<ValidationRule>
    <fullName>CL003PatientNameEntered</fullName>
    <active>true</active>
    <description>Patient Name must be entered if not Self</description>
    <errorConditionFormula>AND( OR(TEXT(Relationship_to_Patent__c) = &quot;Spouse&quot;, TEXT(Relationship_to_Patent__c) = &quot;Dependent&quot;),  Patient_Name_First_Last__c = &quot;&quot;, RecordType.DeveloperName = &quot;Wellness&quot; )</errorConditionFormula>
    <errorDisplayField>Patient_Name_First_Last__c</errorDisplayField>
    <errorMessage>CL-003  Patient Name must be entered if Relationship not self</errorMessage>
</ValidationRule>