unpackaged/main/default/objects/Claims_Form__c/validationRules/CL004PatientBirthDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CL004PatientBirthDate</fullName>
    <active>true</active>
    <description>Patient Name must be entered if not Self</description>
    <errorConditionFormula>AND( OR(TEXT(Relationship_to_Patent__c) = &quot;Spouse&quot;, TEXT(Relationship_to_Patent__c) = &quot;Dependent&quot;),  OR( Patient_Birth_Date__c  &lt; DATE(1890,01,01), Patient_Birth_Date__c &gt; TODAY(),ISNULL( Patient_Birth_Date__c) ), RecordType.DeveloperName = &quot;Wellness&quot;  )</errorConditionFormula>
    <errorDisplayField>Patient_Birth_Date__c</errorDisplayField>
    <errorMessage>CL-004  Patient Birth Date must be entered if Relationship not self and must be less than or equal to today and &gt; 120 years ago</errorMessage>
</ValidationRule>