unpackaged/main/default/objects/Claims_Form__c/validationRules/CL006Validate_Mailing_Zip_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>CL006Validate_Mailing_Zip_Code</fullName>
    <active>true</active>
    <description>Validate Mailing Zip Code</description>
    <errorConditionFormula>AND(NOT(ISNUMBER(Mailing_Address_Zipcode__c)), RecordType.DeveloperName = &quot;Wellness&quot;)</errorConditionFormula>
    <errorDisplayField>Mailing_Address_Zipcode__c</errorDisplayField>
    <errorMessage>CL-006 Mailing Zip Code Must be numeric</errorMessage>
</ValidationRule>