unpackaged/main/default/objects/Claims_Form__c/validationRules/CL009DateTreatmentOrMonthTreatment.validationRule-meta.xml
<ValidationRule>
    <fullName>CL009DateTreatmentOrMonthTreatment</fullName>
    <active>true</active>
    <description>Date of First Treatment  or Month of First Treatment must be entered</description>
    <errorConditionFormula>AND( ISBLANK( Date_of_First_Treatment__c  ),  ISBLANK(     Month_MM_YY_FirstTreatment_No_Date__c ), RecordType.DeveloperName = &quot;Short_Term_Disability&quot; )</errorConditionFormula>
    <errorDisplayField>Date_of_First_Treatment__c</errorDisplayField>
    <errorMessage>CL-009 Either of First Treatment  or Month of First Treatment Must be Entered</errorMessage>
</ValidationRule>