unpackaged/main/default/objects/Claims_Form__c/validationRules/CL012MedicalFacilityAddressCityRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CL012MedicalFacilityAddressCityRequired</fullName>
    <active>true</active>
    <description>Medical Facility Address entered then City is required</description>
    <errorConditionFormula>AND( NOT(ISBLANK(  Medical_Facility_Address__c  )),  ISBLANK(    Medical_Facility_City__c   ) )</errorConditionFormula>
    <errorDisplayField>Medical_Facility_City__c</errorDisplayField>
    <errorMessage>CL-012 If Facility Address Entered City Must be Entered</errorMessage>
</ValidationRule>