unpackaged/main/default/objects/Claims_Form__c/validationRules/CL014MedicalFacilityAddressStateRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CL014MedicalFacilityAddressStateRequired</fullName>
    <active>true</active>
    <description>Medical Facility Address entered then State is required</description>
    <errorConditionFormula>AND( NOT(ISBLANK(  Medical_Facility_Address__c  )),  ISBLANK(     TEXT(Medical_Facility_State__c )   ) )</errorConditionFormula>
    <errorDisplayField>Medical_Facility_State__c</errorDisplayField>
    <errorMessage>CL-014 If Facility Address Entered State Must be Entered</errorMessage>
</ValidationRule>