unpackaged/main/default/objects/Claims_Form__c/validationRules/CL016NatureofIllenessRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CL016NatureofIllenessRequired</fullName>
    <active>true</active>
    <description>For Type of Disability Illness Nature of Illness Required</description>
    <errorConditionFormula>AND( ISBLANK(Nature_of_Illness__c),TEXT( Type_of_Disability__c ) = &quot;Illness&quot; , RecordType.DeveloperName = &quot;Short_Term_Disability&quot; )</errorConditionFormula>
    <errorDisplayField>Nature_of_Illness__c</errorDisplayField>
    <errorMessage>CL-016 If type of Disability Illness then Nature of Illness Required</errorMessage>
</ValidationRule>