unpackaged/main/default/objects/Claims_Form__c/validationRules/CL017PreviousHadThisIllness.validationRule-meta.xml
<ValidationRule>
    <fullName>CL017PreviousHadThisIllness</fullName>
    <active>true</active>
    <description>For Type of Disability Illness - Previous Had This Condition Required</description>
    <errorConditionFormula>AND( ISBLANK( TEXT(Previously_Had_This_or_Similar_Condition__c )),TEXT( Type_of_Disability__c ) = &quot;Illness&quot; , RecordType.DeveloperName = &quot;Short_Term_Disability&quot; )</errorConditionFormula>
    <errorDisplayField>Previously_Had_This_or_Similar_Condition__c</errorDisplayField>
    <errorMessage>CL-017 If type of Disability Illness - then Previously Had This or Similar Condition Required</errorMessage>
</ValidationRule>