unpackaged/main/default/objects/Claims_Form__c/validationRules/CL018PreviousHadThisIllness.validationRule-meta.xml
<ValidationRule>
    <fullName>CL018PreviousHadThisIllness</fullName>
    <active>true</active>
    <description>For Type of Disability Illness - If had this condition before must be explained</description>
    <errorConditionFormula>AND( TEXT(Previously_Had_This_or_Similar_Condition__c )= &quot;Yes&quot;,ISBlank( What_and_When_was_Previous_Illness__c  ) , RecordType.DeveloperName = &quot;Short_Term_Disability&quot;, TEXT( Type_of_Disability__c ) = &quot;Illness&quot;  )</errorConditionFormula>
    <errorDisplayField>What_and_When_was_Previous_Illness__c</errorDisplayField>
    <errorMessage>CL-018 If Previously Had This or Similar Condition = &quot;Yes&quot;  then What and When Was Previous Illness must be keyed</errorMessage>
</ValidationRule>