unpackaged/main/default/objects/Claims_Form__c/validationRules/CL020Howandwheretheaccidentoccured.validationRule-meta.xml
<ValidationRule>
    <fullName>CL020Howandwheretheaccidentoccured</fullName>
    <active>true</active>
    <description>For Type of Disability Accident -How and where the accident occurred must be keyed</description>
    <errorConditionFormula>AND( TEXT( Type_of_Disability__c )= &quot;Accident&quot;, ISBlank(  How_and_Where_the_Accident_Occurred__c) , RecordType.DeveloperName = &quot;Short_Term_Disability&quot; )</errorConditionFormula>
    <errorDisplayField>How_and_Where_the_Accident_Occurred__c</errorDisplayField>
    <errorMessage>CL-020 If Type of Disability - Accident then How and where the accident occurred must be keyed</errorMessage>
</ValidationRule>