unpackaged/main/default/objects/Claims_Form__c/validationRules/CL021DidDisablingAccidentonJob.validationRule-meta.xml
<ValidationRule>
    <fullName>CL021DidDisablingAccidentonJob</fullName>
    <active>true</active>
    <description>For Type of Disability Accident -Did Disabling Accident on a Job</description>
    <errorConditionFormula>AND( TEXT( Type_of_Disability__c )= &quot;Accident&quot;, ISBlank(TEXT(   Did_Disabling_Accident_Occur_Performing__c )) , RecordType.DeveloperName = &quot;Short_Term_Disability&quot; )</errorConditionFormula>
    <errorDisplayField>Did_Disabling_Accident_Occur_Performing__c</errorDisplayField>
    <errorMessage>CL-021 If Type of Disability - Accident then Disabling Condition Occur doing the Job must be filled out</errorMessage>
</ValidationRule>