unpackaged/main/default/objects/Claims_Form__c/validationRules/CL028MustAskforOtherIncome.validationRule-meta.xml
<ValidationRule>
    <fullName>CL028MustAskforOtherIncome</fullName>
    <active>true</active>
    <description>Must Ask for Other Income</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &quot;Short_Term_Disability&quot;, Not(Asked_If_Eligible_For_Other_Income__c))</errorConditionFormula>
    <errorDisplayField>Asked_If_Eligible_For_Other_Income__c</errorDisplayField>
    <errorMessage>CL-028 Must asks if they had other Income and give examples below</errorMessage>
</ValidationRule>