unpackaged/main/default/objects/Claims_Form__c/validationRules/CL030FraudNoticeStateNoticeRead.validationRule-meta.xml
<ValidationRule>
    <fullName>CL030FraudNoticeStateNoticeRead</fullName>
    <active>true</active>
    <description>If Fraud State then Fraud Notice Read Must be Selected</description>
    <errorConditionFormula>AND( Wellness_Fraud_State__c &lt;&gt; &quot;&quot;,  ISBLANK(   Signature_Fraud_Notice_Read__c  ) )</errorConditionFormula>
    <errorDisplayField>Signature_Fraud_Notice_Read__c</errorDisplayField>
    <errorMessage>CL-030  IF Fraud Notice State then Signature Fraud Notice Read Must be Entered</errorMessage>
</ValidationRule>