unpackaged/main/default/objects/Claims_Form__c/validationRules/CL034DateTreatmentOrMonthTreatment_3.validationRule-meta.xml
<ValidationRule>
    <fullName>CL034DateTreatmentOrMonthTreatment_3</fullName>
    <active>true</active>
    <description>Date of Treatment 3 or Month of  Treatment 3 must be entered</description>
    <errorConditionFormula>AND( ISBLANK(  Date_Treated_3__c   ),  ISBLANK(    Treatment_3_MM_YYYY_If_No_Exact_Date__c ), Not( ISBLANK(  Physician_Name_3__c )),  RecordType.DeveloperName = &quot;Short_Term_Disability&quot; )</errorConditionFormula>
    <errorDisplayField>Treatment_3_MM_YYYY_If_No_Exact_Date__c</errorDisplayField>
    <errorMessage>CL-034 Either Date Treated #3 or Treatment#3 MM/YYYY must be entered</errorMessage>
</ValidationRule>