unpackaged/main/default/objects/Claims_Form__c/validationRules/CL035DateTreatmentOrMonthTreatment_4.validationRule-meta.xml
<ValidationRule>
    <fullName>CL035DateTreatmentOrMonthTreatment_4</fullName>
    <active>true</active>
    <description>Date of Treatment 4 or Month of  Treatment 4 must be entered</description>
    <errorConditionFormula>AND( ISBLANK(  Date_Treated_4__c   ),  ISBLANK(    Treatment_4_MM_YYYY_If_No_Exact_Date__c ), Not( ISBLANK(  Physician_Name_4__c )),  RecordType.DeveloperName = &quot;Short_Term_Disability&quot; )</errorConditionFormula>
    <errorDisplayField>Treatment_4_MM_YYYY_If_No_Exact_Date__c</errorDisplayField>
    <errorMessage>CL-035 Either Date Treated #4 or Treatment#4 MM/YYYY must be entered</errorMessage>
</ValidationRule>