unpackaged/main/default/objects/Claims_Form__c/validationRules/CL036DateTreatmentOrMonthTreatment_5.validationRule-meta.xml
<ValidationRule>
    <fullName>CL036DateTreatmentOrMonthTreatment_5</fullName>
    <active>true</active>
    <description>Date of Treatment 4 or Month of  Treatment 4 must be entered</description>
    <errorConditionFormula>AND( ISBLANK(  Date_Treated_5__c   ),  ISBLANK(    Treatment_5_MM_YYYY_If_No_Exact_Date__c ), Not( ISBLANK(  Physician_Name_5__c )),  RecordType.DeveloperName = &quot;Short_Term_Disability&quot; )</errorConditionFormula>
    <errorDisplayField>Treatment_5_MM_YYYY_If_No_Exact_Date__c</errorDisplayField>
    <errorMessage>CL-036 Either Date Treated #5 or Treatment#5 MM/YYYY must be entered</errorMessage>
</ValidationRule>